@@ -586,7 +586,7 @@ class ZCatalog(Folder, Persistent, Implicit):
             # we should commit a subtransaction if our threshhold is
             # exceeded within the boundaries of the current transaction.
             if self._v_total > self.threshold:
-                transaction.commit(1)
+                transaction.savepoint()
                 self._p_jar.cacheGC()
                 self._v_total = 0
                 if pghandler:
